--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,15 +1,34 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #F2F2F2;
 }
 
 header, footer {
-    background: linear-gradient(to right, rgb(1, 1, 109), rgb(125, 194, 216));
+    background: linear-gradient(to bottom, rgb(84, 139, 202), #f2f2f2);
     /* Add more styles for your header and footer */
 }
 
+footer{
+    background: linear-gradient(to top, rgb(84, 139, 202), #f2f2f2);
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
+}
+
+footer p{
+    margin: 0;
+    padding: 3px;
+}
 .navbar-brand img{
     height: 50px;
     width: auto;
+    -webkit-filter: drop-shadow(5px 5px 5px #000000);
+    filter: drop-shadow(5px 5px 2px #000000);
+}
+
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 /* LOGIN BOX */
@@ -18,6 +37,7 @@ header, footer {
     width: 100%;
     max-width: 400px; /* adjust as needed */
     margin: 0 auto; /* center the box */
+    margin-top: 15svh;
     padding: 20px;
     background-color: #fff; /* adjust as needed */
     border: 1px solid #ddd; /* adjust as needed */
@@ -45,4 +65,13 @@ header, footer {
 
 .login-box input[type="submit"]:hover {
     background-color: #0056b3; /* adjust as needed */
+}
+
+
+/* responsive media queries */
+
+@media screen and (max-width: 768px) {
+    .login-box {
+        width: 80%;
+    }
 }
