--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3,32 +3,58 @@ body {
     background-color: #F2F2F2;
 }
 
-header, footer {
+header{
     background: linear-gradient(to bottom, rgb(84, 139, 202), #f2f2f2);
-    /* Add more styles for your header and footer */
 }
 
+header i{
+    padding: 10px;
+}
+
+header .navbar-nav {
+    flex-direction: row;
+}
+
+.navbar-brand img{
+    height: 80px;
+    width: auto;
+    -webkit-filter: drop-shadow(2px 10px 15px #2222ee);
+    filter: drop-shadow(2px 10px 15px #2222ee);
+}
+
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+/* FOOTER */
 footer{
     background: linear-gradient(to top, rgb(84, 139, 202), #f2f2f2);
     position: absolute;
     width: 100%;
     bottom: 0;
     text-align: center;
+    font-size: clamp(0.7rem, 1.5vw, 1rem);
 }
 
 footer p{
     margin: 0;
     padding: 3px;
 }
-.navbar-brand img{
-    height: 50px;
-    width: auto;
-    -webkit-filter: drop-shadow(5px 5px 5px #000000);
-    filter: drop-shadow(5px 5px 2px #000000);
+
+footer a{
+    font-size: clamp(0.7rem, 1.5vw, 1rem);
 }
 
-.navbar-toggler-icon{
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+footer h5{
+    margin: 0;
+    padding: 3px;
+    line-height: 0.2rem;
+}
+
+footer .navbar-brand img{
+    margin: 0;
+    padding: 0;
+    height: 50px;
+    width: auto;
 }
 
 /* LOGIN BOX */
