--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,13 +1,36 @@
+*  {
+    margin: 0;
+    padding: 0;
+}
+
+/* Colors
+
+Royal Blue	#4e76e8	Primary
+Astronaut	#2b376d	Info
+Aqua Forest	#4d9e7e	Success
+Tussock	#ca8e46	Warning
+Pomegranate	#f44336	Danger 
+
+
+Light = #F7F2F0 - Spring Wood
+Light Accent = #80B8DD - Viking
+Main = #4C73EB - Royal Blue
+Dark Accent = #8B7284 - Mountbatten Pink
+Dark = #2B376D - Astronaut
+
+*/
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #F2F2F2;
+    background-color: #2B376D;
 }
 
-header{
-    background: linear-gradient(to bottom, rgb(84, 139, 202), #f2f2f2);
+header {
+    background: linear-gradient(to bottom, black, #2B376D);
+    
 }
 
-header i{
+header i {
     padding: 10px;
 }
 
@@ -15,89 +38,152 @@ header .navbar-nav {
     flex-direction: row;
 }
 
-.navbar-brand img{
+.navbar .navbar-nav .nav-item {
+    position: relative;
+}
+
+.navbar .navbar-nav .nav-item::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    content: "";
+    background-color: #F7F2F0;
+    width: 0%;
+    height: 4px;
+    transition: all 0.3s;
+}
+
+.navbar .navbar-nav .nav-item:hover::after {
+    width: 100%;
+}
+
+.navbar .nav-link {
+    padding: 0.3rem;
+    color: #4C73EB;
+    transition: all 1s;
+}
+
+.navbar .nav-link:hover {
+    color: #F7F2F0;
+}
+
+.navbar-brand img {
     height: 80px;
     width: auto;
-    -webkit-filter: drop-shadow(2px 10px 15px #2222ee);
-    filter: drop-shadow(2px 10px 15px #2222ee);
+    -webkit-filter: drop-shadow(5px 5px 10px #2B376D);
+    filter: drop-shadow(5px 5px 10px #2B376D);
 }
 
-.navbar-toggler-icon{
+.navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
 /* FOOTER */
-footer{
-    background: linear-gradient(to top, rgb(84, 139, 202), #f2f2f2);
-    position: absolute;
+footer {
+    background: linear-gradient(to top, black, #2B376D);
+    position:fixed;
     width: 100%;
     bottom: 0;
+    left: 0;
     text-align: center;
     font-size: clamp(0.7rem, 1.5vw, 1rem);
+    clear:both;
 }
 
-footer p{
+footer p {
     margin: 0;
     padding: 3px;
 }
 
-footer a{
+footer a {
     font-size: clamp(0.7rem, 1.5vw, 1rem);
 }
 
-footer h5{
+footer h5 {
     margin: 0;
     padding: 3px;
     line-height: 0.2rem;
 }
 
-footer .navbar-brand img{
-    margin: 0;
-    padding: 0;
+footer .navbar-brand img {
     height: 50px;
     width: auto;
+}
+
+footer button{
+    text-decoration: wavy;
+    font-style: italic;
+}
+
+.modal-backdrop {
+    z-index: 1040 !important;
+}
+
+.modal-content {
+    margin: 2px auto;
+    z-index: 1100 !important;
 }
 
 /* LOGIN BOX */
 
 .login-box {
     width: 100%;
-    max-width: 400px; /* adjust as needed */
-    margin: 0 auto; /* center the box */
+    max-width: 400px;
+    margin: 0 auto;
     margin-top: 15svh;
     padding: 20px;
-    background-color: #fff; /* adjust as needed */
-    border: 1px solid #ddd; /* adjust as needed */
-    border-radius: 5px; /* adjust as needed */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* adjust as needed */
+    background-color: #2B376D;
+    border: 3px solid #ca8e46;
+    border-radius: 8px;
+    transition: 0.3s;
 }
 
-.login-box input[type="text"], .login-box input[type="password"] {
+.login-box:focus-within {
+    box-shadow: 2px 2px 50px #F7F2F0a0;
+    transition: 0.3s;
+}
+
+.login-box input[type="text"],
+.login-box input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ddd; /* adjust as needed */
-    border-radius: 5px; /* adjust as needed */
+    border: 1px solid #ca8e46;
+    border-radius: 5px;
     margin-bottom: 10px;
 }
 
 .login-box input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #007bff; /* adjust as needed */
-    color: #fff; /* adjust as needed */
+    background-color: #4e76e8;
+    color: #F7F2F0;
     border: none;
-    border-radius: 5px; /* adjust as needed */
+    border-radius: 5px;
     cursor: pointer;
+    transition: 0.5s;
+}
+
+.login-box input[type="checkbox"] {
+    background-color: #F7F2F0;
+    transition: 0.5s;
+}
+
+.login-box label.form-check-label {
+    color: #F7F2F0;
+}
+
+.login-box input[type="checkbox"]:hover {
+    transition: 0.5s;
+    background-color: #ca8e46;
+}
+
+.login-box input[type="checkbox"]:checked {
+    background-color: #ca8e46;
 }
 
 .login-box input[type="submit"]:hover {
-    background-color: #0056b3; /* adjust as needed */
-}
-
-
-/* responsive media queries */
-
-@media screen and (max-width: 768px) {
-    .login-box {
-        width: 80%;
-    }
+    transition: 0.5s;
+    background-color: #ca8e46;
 }
