--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -23,7 +23,12 @@ Dark = #2B376D - Astronaut
 body {
     font-family: Arial, sans-serif;
     background-color: #2B376D;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
+
+/* HEADER */
 
 header {
     background: linear-gradient(to bottom, black, rgba(43, 55, 109));
@@ -127,9 +132,12 @@ footer button{
     z-index: 1100 !important;
 }
 
-/* MAIN */
-main{
-    margin-bottom: 15svh;
+/* 401 and 404 */
+
+.not-auth-found{
+    margin-top: 15vh;
+    text-align: center;
+    color: #F7F2F0;
 }
 
 /* LOGIN BOX */
