--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -23,9 +23,9 @@ Dark = #2B376D - Astronaut
 body {
     font-family: Arial, sans-serif;
     background-color: #2B376D;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
 }
 
 /* HEADER */
@@ -84,14 +84,21 @@ header .navbar-nav {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+.nav-icons i{
+    font-size: 1.5rem;
+    color: #F7F2F0;
+    margin: 0 0.3rem;
+    transition: all 0.3s;
+}
+
 /* FOOTER */
 
 footer {
     background: linear-gradient(to top, black, #2B376D);
-    position:fixed;
-    width: 100%;
+    position: sticky;
+    align-self: flex-end;
     bottom: 0;
-    left: 0;
+    width: 100%;
     text-align: center;
     font-size: clamp(0.7rem, 1.5vw, 1rem);
     clear:both;
@@ -135,7 +142,7 @@ footer button{
 /* 401 and 404 */
 
 .not-auth-found{
-    margin-top: 15vh;
+    margin-top: 15dvh;
     text-align: center;
     color: #F7F2F0;
 }
@@ -144,9 +151,10 @@ footer button{
 
 .login-box {
     width: 100%;
+    flex-grow: 1;
     max-width: 400px;
     margin: 0 auto;
-    margin-top: 15svh;
+    margin-top: 15dvh;
     padding: 20px;
     background-color: #2B376D;
     border: 3px solid #ca8e46;
