live chat butonu, collapsing live chat eklendi. responsive ayarlandı.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -66,7 +66,6 @@ header .navbar-nav {
 .navbar .nav-link {
     padding: 0.3rem;
     color: #F7F2F0;
-    transition: all 0,3s;
 }
 
 .navbar .nav-link:hover {
@@ -84,17 +83,24 @@ header .navbar-nav {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-.nav-icons i{
+.nav-link i{
     font-size: 1.5rem;
     color: #F7F2F0;
     margin: 0 0.3rem;
     transition: all 0.3s;
 }
 
+/* LIVE CHAT */
+
+.live-chat {
+    z-index: 1000;
+    left: 0;
+}
+
 /* FOOTER */
 
 footer {
-    background: linear-gradient(to top, black, #2B376D);
+    background: linear-gradient(to top, black, #2B376D);    
     position: sticky;
     align-self: flex-end;
     bottom: 0;
